[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/menu/menu_card.gd" type="Script" id=1]

[node name="MenuCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TooltipTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="TooltipTimer" to="." method="_on_tooltip_timer_timeout"]
