[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/menu/menu_card.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/title.tres" type="Theme" id=2]
[ext_resource path="res://gui/menu/menu_list.tscn" type="PackedScene" id=3]

[node name="MenuCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 64.0
margin_top = 54.0
margin_right = 576.0
margin_bottom = 306.0

[node name="HeadingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 18.0
align = 1
valign = 1

[node name="HeadingSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 512.0
margin_bottom = 26.0

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 512.0
margin_bottom = 244.0
rect_min_size = Vector2( 512, 214 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="MenuList" parent="CenterContainer/VBoxContainer/ScrollContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 512.0

[node name="MenuSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 512.0
margin_bottom = 252.0

[connection signal="key_button_pressed" from="CenterContainer/VBoxContainer/ScrollContainer/MenuList" to="." method="_on_menu_list_key_button_pressed"]
